CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(CommercialMan)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FILE(GLOB SOURCES "src/*.cc" "src/*.hh" )

# Executables
ADD_EXECUTABLE(CommercialMan ${SOURCES})
TARGET_LINK_LIBRARIES(CommercialMan SDL2)
TARGET_LINK_LIBRARIES(CommercialMan SDL2_gfx)
TARGET_LINK_LIBRARIES(CommercialMan SDL2_ttf)
TARGET_LINK_LIBRARIES(CommercialMan SDL2_image)

