CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(CommercialMan)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image)

FILE(GLOB SOURCES "src/*.cc" "src/*.hh" )

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
ADD_EXECUTABLE(CommercialMan ${SOURCES})
TARGET_LINK_LIBRARIES(CommercialMan ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})

